@@ -1,7 +1,7 @@
 #!/usr/bin/python -OO
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/catalyst,v 1.116 2005/12/19 20:53:13 rocket Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/catalyst,v 1.117 2005/12/19 22:18:54 rocket Exp $
 
 # Maintained in full by:
 # Eric Edgar <rocket@gentoo.org>
@@ -328,10 +328,39 @@ if __name__ == "__main__":
 	if conf_values.has_key("digests"):
 		for i in conf_values["digests"].split():
 			if not hash_map.has_key(i):
+				print
+				print i+" is not a valid digest entry"
 				print "Valid digest entries:"
 				print hash_map.keys()
-				raise CatalystError, i+" is not a valid digest entry"
-	
+				print
+				print "Catalyst aborting...."
+				sys.exit(2)
+			if find_binary(hash_map[i][1]) == None:
+				print
+				print "digest="+i
+				print "\tThe "+hash_map[i][1]+\
+					" binary was not found. It needs to be in your system path"
+				print
+				print "Catalyst aborting...."
+				sys.exit(2)
+	if conf_values.has_key("hash_function"):
+		if not hash_map.has_key(conf_values["hash_function"]):
+			print
+			print conf_values["hash_function"]+" is not a valid hash_function entry"
+			print "Valid hash_function entries:"
+			print hash_map.keys()
+			print
+			print "Catalyst aborting...."
+			sys.exit(2)
+		if find_binary(hash_map[conf_values["hash_function"]][1]) == None:
+			print
+			print "hash_function="+conf_values["hash_function"]
+			print "\tThe "+hash_map[conf_values["hash_function"]][1]+\
+				" binary was not found. It needs to be in your system path"
+			print
+			print "Catalyst aborting...."
+			sys.exit(2)
+
 	# import the rest of the catalyst modules
 	targetmap=import_modules()
 
