@@ -1,5 +1,9 @@
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.471 2005/12/19 21:19:11 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.472 2005/12/19 22:18:54 rocket Exp $
+
+  19 Dec 2005; Eric Edgar <rocket@gentoo.org> catalyst,
+  modules/catalyst_support.py, modules/generic_stage_target.py:
+  Detect missing binaries for the hashing functions and abort if not found
 
   19 Dec 2005; Chris Gianelloni <wolf31o2@gentoo.org> README,
   files/catalyst.conf:
